--- a/rro_overlays/FrameworksResOverlayPhoenix/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayPhoenix/res/values/config.xml
@@ -643,4 +643,9 @@
 
     <!-- Indicates whether device has a power button fingerprint sensor. -->
     <bool name="config_is_powerbutton_fps" translatable="false" >true</bool>
+
+    <!-- SQLite -->
+    <string name="db_default_journal_mode">MEMORY</string>
+    <string name="db_default_sync_mode">OFF</string>
+    <string name="db_wal_sync_mode">OFF</string>
 </resources>
