--- a/overlay/TelephonyOverlayPhoenix/res/values/config.xml
+++ b/overlay/TelephonyOverlayPhoenix/res/values/config.xml
@@ -17,11 +17,11 @@
     <!-- The package name for the platform carrier config app, bundled with system image. -->
     <string name="platform_carrier_config_package" translatable="false">com.google.android.carrier</string>
 
-    <!-- String indicating the package name of the device ImsService implementation for MMTEL. -->
-    <string name="config_ims_mmtel_package" translatable="false">org.codeaurora.ims</string>
+    <!-- String indicating the package name of the device ImsService implementation for MMTEL -->
+    <string name="config_ims_mmtel_package">org.codeaurora.ims</string>
 
-    <!-- String indicating the package name of the device ImsService implementation for RCS. -->
-    <string name="config_ims_rcs_package" translatable="false">com.android.service.ims</string>
+    <!-- String indicating the package name of the device ImsService implementation for RCS -->
+    <string name="config_ims_rcs_package">vendor.qti.imsrcs</string>
 
     <!-- Whether or not to support RCS User Capability Exchange -->
     <bool name="config_rcs_user_capability_exchange_enabled">false</bool>
